--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,5 @@
 version: '3.8'
 services:
-  app:
-    build: .
-    ports:
-      - '3000:3000'
-    environment:
-      - POSTGRES_HOST=postgres
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=seminario
-    depends_on:
-      - postgres
   postgres:
     image: postgres:13
     environment:
@@ -20,4 +9,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
