--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "init-db": "ts-node ./init-db.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "@types/node": "^20.14.2",
     "@types/pg": "^8.11.6",
     "@types/sequelize": "^4.28.20",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
@@ -23,6 +26,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "tsconfig-paths": "^4.2.0"
   }
 }
