--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,6 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
-    "paths": {
-      "@models/*": ["models/*"],
-      "@config/*": ["config/*"]
-    }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/models/interface/**/*.ts"],
 }
